################################################################################
##
##  YOUR QUILL
##
################################################################################

add_executable( 
    nw
    chunkify.cpp
    format.cpp
    html.cpp
    latex.cpp
    markdown.cpp
    nv.cpp
    rtf.cpp
    text.cpp
)
